--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <h3 align="center">Download</h3>
         <hr />
         <p>
-            We provide each Astrobee sequence in the TUM RGB-D format and the original bag file. Each sequence is compressed as a single **ZIP** archive which contains a **description file**, **images**,
-            **calibration parameters**, **ground-truth**, and **IMU measurements**. <br> </p>
+            We provide each Astrobee sequence in the TUM RGB-D format and the original bag file. Each sequence is compressed as a single <strong>ZIParchive</strong> which contains a <strong>description file</strong>, <strong>images</strong>,
+            <strong>calibration parameters</strong>, <strong>ground-truth</strong>, and <strong>IMU measurements<strong>. <br> </p>
           <h4><strong>Test and Debugging</strong></h4>
           <p>
           <table style="width: 50%; float: left;">
@@ -263,8 +263,8 @@
             <ui>
             <li>The distorted images are stored in "gray_raw" folder as 1280x960 8-bit gray images in PNG format. </li>
             <li>The undistorted images are stored in "gray" folder as 1270x874 8-bit gray images in PNG format.</li>
-            <li>The name of the image file is **[timestamp.png]**.</li>
-            <li>The list of all images and their timestamp are also stored in "gray.txt" text file in **[timestamp filename]** format.</li>
+            <li>The name of the image file is <strong>[timestamp.png]</strong>.</li>
+            <li>The list of all images and their timestamp are also stored in "gray.txt" text file in <strong>[timestamp filename]</strong> format.</li>
             <li>Timestamp are in integer nanoseconds UNIX.</li>
             </ul><br>  </p>
 
@@ -272,11 +272,11 @@
             <p>We provide the Ground-truth trajectories in text file containing 6-DoF camera poses for all images. We also provide the angular rates and acceleration measurements from IMU.<br><br>
             <ul>
             <li>The ground-truth trajectories are stored in "groundtruth.txt".</li>
-            <li>Each line in the groundtruth text file contains a single pose of nav_cam as **[timestamp tx ty tz qx qy qz qw]** format.</li><br>
+            <li>Each line in the groundtruth text file contains a single pose of nav_cam as <strong>[timestamp tx ty tz qx qy qz qw]</strong> format.</li><br>
             </ul>
             <ul>
             <li>The IMU are stored in "imu.txt".</li>
-            <li>Each line in the imu text file contains timestamped gyro and accelerometer measurements as **[timestamp wx wy wz ax ay az]** format.</li><br>
+            <li>Each line in the imu text file contains timestamped gyro and accelerometer measurements as <strong>[timestamp wx wy wz ax ay az]</strong> format.</li><br>
             </ul>
             Note that all measurements above are expressed in SI units.<br> <br> </p>
 
@@ -284,8 +284,8 @@
             <p>
             We provide the intrinsic camera parameters for both (raw / undistorted) images in text file.<br>
             <ul>
-            <li>The intrinsic camera parameters for the distorted images are stored in "distorted calib.txt" with FOV lens distortion coefficient as **[fx fy cx cy w]** format.</li>
-            <li>The intrinsic camera parameters for the undistorted images are stored in "undistorted calib.txt" as **[fx fy cx cy]** format.</li>
+            <li>The intrinsic camera parameters for the distorted images are stored in "distorted calib.txt" with FOV lens distortion coefficient as <strong>[fx fy cx cy w]</strong> format.</li>
+            <li>The intrinsic camera parameters for the undistorted images are stored in "undistorted calib.txt" as <strong>[fx fy cx cy]</strong> format.</li>
             </ul> </p>
             <br />
             <hr >
