--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
           measurements). We also benchmark six state-of-the-art visual odometry (VO) and SLAM algorithms on the proposed Astrobee datasets and you can see in our paper.
         </p>
       </div>
+
+
       <div class="section">
         <h3 align="center">The Astrobee Dataset</h3>
         <hr />
@@ -57,13 +59,16 @@
           <img src='/image/example_ISS.png' width="970">
         </p>
       </div>
-      <p></p>
+
+
       <div class="section">
         <h3 align="center">Download</h3>
         <hr />
         <p>
             We provide each Astrobee sequence in the TUM RGB-D format and the original bag file. Each sequence is compressed as a single <strong>ZIParchive</strong> which contains a <strong>description file</strong>, <strong>images</strong>,
-            <strong>calibration parameters</strong>, <strong>ground-truth</strong>, and <strong>IMU measurements<strong>. <br> </p>
+            <strong>calibration parameters</strong>, <strong>ground-truth</strong>, and <strong>IMU measurements</strong>. <br> </p>
+
+
           <h4><strong>Test and Debugging</strong></h4>
           <p>
           <table style="width: 50%; float: left;">
@@ -109,6 +114,8 @@
               </tbody>
           </table>
           </p>
+
+
           <h4><strong>Free Flight</strong></h4>
           <p>
           <table style="width: 50%; float: right;">
@@ -251,12 +258,15 @@
         </p>
       </div>
 
+
       <div class="section">
         <h3 align="center">Dataset Format</h3>
         <hr />
         <p>
             We provide each Astrobee sequence in the TUM RGB-D format in the following format:  </p>
           <hr>
+
+
           <h4><strong>Distorted and Undistorted Images</strong></h4>
           <p>
               We provide both original raw distorted images(with FOV lens distortion) and the undistorted images using existing dataset parsing tools.
@@ -279,6 +289,7 @@
             Note that all measurements above are expressed in SI units.</p>
           <hr>
 
+
           <h4><strong> Intrinsic Camera Calibration Parmeters</strong></h4>
             <p>
             We provide the intrinsic camera parameters for both (raw / undistorted) images in text file.<br>
@@ -287,6 +298,8 @@
             <li>The intrinsic camera parameters for the undistorted images are stored in "undistorted calib.txt" as <strong>[fx fy cx cy]</strong> format.</li>
             </ul> </p>
             <hr >
+
+
           <h4><strong> Astrobee platform</strong></h4>
             <p>The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
             <img src="/image/astrobee_platform.png" width="400" height="200">
@@ -298,6 +311,8 @@
       </div>
       <br />
       <br />
+
+
       <div class="section">
         <h3 align="center">BibTex</h3>
         <hr />
@@ -311,6 +326,7 @@
         </div>
         <p></p>
       </div>
+
 
       <div class="container" style="margin-top: -40px">
       <br />
@@ -326,6 +342,8 @@
             </ul>
         </p>
       </div>
+
+
         <footer>
         <hr />
         <p>
