--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <footer>
         <hr />
         <p>
-           <Sookmyung Women's University, MPIL(Machine Perception and Intelligence Lab) <br>
+           Sookmyung Women's University, MPIL(Machine Perception and Intelligence Lab) <br>
         </p>
         </footer>
 
