--- a/version1/index_before.html
+++ b/version1/index_before.html
@@ -48,6 +48,8 @@
           measurements). We also benchmark six state-of-the-art visual odometry (VO) and SLAM algorithms on the proposed Astrobee datasets and you can see in our paper.
         </p>
       </div>
+
+
       <div class="section">
         <h3 align="center">The Astrobee Dataset</h3>
         <hr />
@@ -57,21 +59,20 @@
           <img src='/image/example_ISS.png' width="970">
         </p>
       </div>
-      <p></p>
+
+
       <div class="section">
         <h3 align="center">Download</h3>
-        <hr/>
+        <hr />
         <p>
             We provide each Astrobee sequence in the TUM RGB-D format and the original bag file. Each sequence is compressed as a single <strong>ZIParchive</strong> which contains a <strong>description file</strong>, <strong>images</strong>,
             <strong>calibration parameters</strong>, <strong>ground-truth</strong>, and <strong>IMU measurements</strong>. <br> </p>
 
-            
-            <br>
-            <hr>
-            <div class="graph">
-              <div class="tb1">
-            <h4><strong>Test and Debugging</strong></h4>
-          <table style="width: 100%;">
+
+          <h4><strong>Test and Debugging</strong></h4>
+          <hr />
+          <p>
+          <table style="width: 50%; float: left;">
               <colgroup>
                   <col style="width: 35%">
                   <col style="width: 5%">
@@ -88,36 +89,38 @@
               </thead>
               <tbody>
               <tr>
-                  <td>&nbsp;tb_roll</td>
+                  <td>tb_roll</td>
                   <td style="text-align:center">63</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;tb_pitch</td>
+                  <td>tb_pitch</td>
                   <td style="text-align:center">75</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;tb_yaw</td>
+                  <td>tb_yaw</td>
                   <td style="text-align:center">50</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;tb_zxy</td>
+                  <td>tb_zxy</td>
                   <td style="text-align:center">50</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               </tbody>
           </table>
-          </div>
+          </p> <br><br>
 
-          <div class="tb3">
+
           <h4><strong>Free Flight</strong></h4>
-          <table style="width: 100%;">
+          <hr />
+          <p>
+          <table style="width: 50%; float: right;">
               <colgroup>
                   <col style="width: 35%">
                   <col style="width: 5%">
@@ -134,69 +137,66 @@
               </thead>
               <tbody>
               <tr>
-                  <td>&nbsp;ff_return_journey_forward</td>
+                  <td>ff_return_journey_forward</td>
                   <td style="text-align:center">402</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;ff_return_journey_up </td>
+                  <td>ff_return_journey_up </td>
                   <td style="text-align:center">413</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;ff_return_journey_left</td>
+                  <td>ff_return_journey_left</td>
                   <td style="text-align:center">303</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;ff_return_journey_right</td>
+                  <td>ff_return_journey_right</td>
                   <td style="text-align:center">328</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;ff_return_journey_rot</td>
+                  <td>ff_return_journey_rot</td>
                   <td style="text-align:center">108</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;ff_JEM2USL_dark</td>
+                  <td>ff_JEM2USL_dark</td>
                   <td style="text-align:center">32</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;ff_JEM2USL_bright</td>
+                  <td>ff_JEM2USL_bright</td>
                   <td style="text-align:center">92</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;ff_nod2_dark</td>
+                  <td>ff_nod2_dark</td>
                   <td style="text-align:center">296</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;ff_nod2_light</td>
+                  <td>ff_nod2_light</td>
                   <td style="text-align:center">265</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               </tbody>
           </table>
-        </div>
-        <br><br>
+          </p>
 
-        <div class="line"></div>
-
-        <div class="tb2">
           <h4><strong>Intra-Vehicular Activity</strong></h4>
-          <table style="width: 100%;">
+          <p>
+          <table style="width: 50%; float: left;">
               <colgroup>
                   <col style="width: 35%">
                   <col style="width: 5%">
@@ -213,60 +213,63 @@
               </thead>
               <tbody>
               <tr>
-                  <td>&nbsp;iva_kibo_trans</td>
+                  <td>iva_kibo_trans</td>
                   <td style="text-align:center">229</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;iva_kibo_rot</td>
+                  <td>iva_kibo_rot</td>
                   <td style="text-align:center">196</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;iva_hatch_inspection1</td>
+                  <td>iva_hatch_inspection1</td>
                   <td style="text-align:center">403</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;iva_hatch_inspection2</td>
+                  <td>iva_hatch_inspection2</td>
                   <td style="text-align:center">521</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;iva_dynamic_context1</td>
+                  <td>iva_dynamic_context1</td>
                   <td style="text-align:center">236</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;iva_dynamic_context2</td>
+                  <td>iva_dynamic_context2</td>
                   <td style="text-align:center">192</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               <tr>
-                  <td>&nbsp;iva_ARtag</td>
+                  <td>iva_ARtag</td>
                   <td style="text-align:center">62</td>
                   <td style="text-align:center">      </td>
                   <td style="text-align:center">      </td>
               </tr>
               </tbody>
           </table>
-        </div>
-        </div>
+          <hr />
+        </p>
       </div>
+
 
       <div class="section">
         <h3 align="center">Dataset Format</h3>
         <hr />
         <p>
-            We provide each Astrobee sequence in the TUM RGB-D format in the following format: <br> </p>
+            We provide each Astrobee sequence in the TUM RGB-D format in the following format:  </p><br>
+
+
           <h4><strong>Distorted and Undistorted Images</strong></h4>
-          <hr class="short">
+          <hr />
           <p>
               We provide both original raw distorted images(with FOV lens distortion) and the undistorted images using existing dataset parsing tools.
             <ui>
@@ -277,8 +280,9 @@
             <li>Timestamp are in integer nanoseconds UNIX.</li>
             </ul><br>  </p>
 
+
           <h4><strong> Ground-truth trajectories and IMU</strong></h4>
-          <hr class="short">
+          <hr />
             <p>We provide the Ground-truth trajectories in text file containing 6-DoF camera poses for all images. We also provide the angular rates and acceleration measurements from IMU.<br><br>
             <ul>
             <li>The ground-truth trajectories are stored in "groundtruth.txt".</li>
@@ -288,18 +292,21 @@
             </ul>
             Note that all measurements above are expressed in SI units.<br></p>
 
+
           <h4><strong> Intrinsic Camera Calibration Parmeters</strong></h4>
-          <hr class="short">
+          <hr />
             <p>
             We provide the intrinsic camera parameters for both (raw / undistorted) images in text file.<br>
             <ul>
             <li>The intrinsic camera parameters for the distorted images are stored in "distorted calib.txt" with FOV lens distortion coefficient as <strong>[fx fy cx cy w]</strong> format.</li>
             <li>The intrinsic camera parameters for the undistorted images are stored in "undistorted calib.txt" as <strong>[fx fy cx cy]</strong> format.</li>
             </ul>
+          <br>
           </p>
-            <br />
-            <hr >
+
+
           <h4><strong> Astrobee platform</strong></h4>
+          <hr />
             <p>The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
             <img src="/image/astrobee_platform.png" width="400" height="200">
             <ul>
@@ -310,19 +317,24 @@
       </div>
       <br />
       <br />
+
+
       <div class="section">
         <h3 align="center">BibTex</h3>
         <hr />
         <div class="bibtexsection">
-          @InProceedings{ ????,
+            <br>
+            @InProceedings{ ????,
 				title     = {Astrobee Datasets for Intra-Vehicular Activity Robots on the ISS},
                 author    = {Suyoung Kang, Daekyeong Lee, Ryan Soussan, Pyojin Kim, Brian Coltin, Andres Mora Vargas, Marina Moreira, Kathryn Hamilton, Ruben Garcia, Maria Bualat, Trey Smith, Jonathan Barlow, Jose Benavides},
 				booktitle = {?????},
 				year      = {2023}
-			}
+			} <br>
+
         </div>
         <p></p>
       </div>
+
 
       <div class="container" style="margin-top: -40px">
       <br />
@@ -338,10 +350,12 @@
             </ul>
         </p>
       </div>
+
+
         <footer>
         <hr />
         <p>
-           <font-size="2">Sookmyung Women's University, MPIL(Machine Perception and Intelligence Lab)</font> <br>
+           Sookmyung Women's University, MPIL(Machine Perception and Intelligence Lab) <br>
         </p>
         </footer>
 
