--- a/index.html
+++ b/index.html
@@ -264,7 +264,9 @@
         <h3 align="center">Dataset Format</h3>
         <hr />
         <p>
-            We provide each Astrobee sequence in the TUM RGB-D format in the following format: <br> </p>
+            We provide each Astrobee sequence in the TUM RGB-D format in the following format: </p>
+          <br>
+          <br>
           <h4><strong>Distorted and Undistorted Images</strong></h4>
           <hr class="short">
           <p>
@@ -298,8 +300,8 @@
             </ul>
           </p>
             <br />
-            <hr >
           <h4><strong> Astrobee platform</strong></h4>
+            <br />
             <p>The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
             <img src="/image/astrobee_platform.png" width="400" height="200">
             <ul>
@@ -341,7 +343,7 @@
         <footer>
         <hr />
         <p>
-           <font-size="2">Sookmyung Women's University, MPIL(Machine Perception and Intelligence Lab)</font> <br>
+           Sookmyung Women's University, MPIL(Machine Perception and Intelligence Lab) <br>
         </p>
         </footer>
 
