--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
             We provide each Astrobee sequence in the TUM RGB-D format and the original bag file. Each sequence is compressed as a single <strong>ZIParchive</strong> which contains a <strong>description file</strong>, <strong>images</strong>,
             <strong>calibration parameters</strong>, <strong>ground-truth</strong>, and <strong>IMU measurements</strong>. <br> </p>
 
-            
-            <br>
+
             <hr>
             <div class="graph">
               <div class="tb1">
@@ -286,9 +285,9 @@
             <li>The ground-truth trajectories are stored in "groundtruth.txt".</li>
             <li>Each line in the groundtruth text file contains a single pose of nav_cam as <strong>[timestamp tx ty tz qx qy qz qw]</strong> format.</li>
             <li>The IMU are stored in "imu.txt".</li>
-            <li>Each line in the imu text file contains timestamped gyro and accelerometer measurements as <strong>[timestamp wx wy wz ax ay az]</strong> format.</li><br>
+            <li>Each line in the imu text file contains timestamped gyro and accelerometer measurements as <strong>[timestamp wx wy wz ax ay az]</strong> format.</li>
             </ul>
-            Note that all measurements above are expressed in SI units.<br></p>
+            Note that all measurements above are expressed in SI units.</p> <br>
 
           <h4><strong> Intrinsic Camera Calibration Parmeters</strong></h4>
           <hr class="short">
@@ -301,7 +300,7 @@
           </p>
             <br />
           <h4><strong> Astrobee platform</strong></h4>
-            <br />
+          <hr class="short">
             <p>The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
             <img src="/image/astrobee_platform.png" width="400" height="200">
             <ul>
